<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_room_24px"
        android:title="Home"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_message_24px"
        android:title="Messages"/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_baseline_supervisor_account_24px"
        android:title="Friends"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="Profile"/>
</menu>