<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <FrameLayout
        android:id="@+id/fcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationView"
    />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        style="@style/BottomNavigation"
        app:menu="@menu/navigation"/>


</android.widget.RelativeLayout>